<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sharedushu.sharemind.UI.SearchActivity"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:layout_marginBottom="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:id="@+id/search_edit"
                android:singleLine="true"
                android:hint="@string/search_hit"
                android:textCursorDrawable="@null"
                android:background="@drawable/search_style" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search_confirm"
                android:clickable="true"
                android:text="@string/search_start"
                android:background="@drawable/search_button"
                android:textColor="#ffffff"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_marginLeft="5dp" />
        </LinearLayout>
    </LinearLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/search_book_list"
        android:layout_weight="1"
        android:background="#00ffffff" />

    <RelativeLayout
        android:id="@+id/search_waiting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center">
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:id="@+id/search_waiting_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching"
            android:layout_below="@+id/search_waiting_progress"
            android:textSize="12sp"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>
