<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sharedushu.sharemind.UI.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:layout_marginBottom="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookstore"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:layout_gravity="center" />
        <Button
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@android:drawable/ic_menu_search"
            android:id="@+id/start_search"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:clickable="true" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/book_list"
            android:background="#00ffffff"
            android:dividerHeight="0dp"
            android:divider="#00ffffff" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_tip_text"
            android:text="@string/search_tip"
            android:layout_gravity="center"
            android:textSize="18dp" />
    </FrameLayout>

</LinearLayout>
